--- a/app/views/institutions/_people.html.erb
+++ b/app/views/institutions/_people.html.erb
@@ -1,5 +1,5 @@
 <!-- people linked with this institution -->
-<% @institution.people.each do |i| %>
+<% obj.people.each do |i| %>
   <% @person = i %>
   <% a = i %>
 <div class="cols" style="padding-bottom:20px">
