--- a/app/views/institutions/new.html.erb
+++ b/app/views/institutions/new.html.erb
@@ -1,21 +1,1 @@
-<script type="text/javascript">
-$(function(){
-  $("ul.tab-menus li.new_institution").show();
-  $(".tab-menus li").removeClass("active-tab");
-  $("ul.tab-menus li.new_institution").addClass("active-tab");
-  $("ul.tab-menus li.new_institution").trigger("click");
-  setColorsFromSession();
-  activeMM("institutionsMM");
-  
-});
-</script>
-
-<% flash[:notice] = @institution.errors.full_messages.join(" ,")  rescue nil %>
-
-<div class="tab-container">
- <%= render 'enquiries/tabs', :stat => "InstitutionType",:model => "institution" %> 
-    <div class="tab-content" id="new_institution_id">
-
-    </div>
-</div>
-
+<%= render 'form' %>
