--- a/app/views/registrations/_basic.html.erb
+++ b/app/views/registrations/_basic.html.erb
@@ -1,3 +1,4 @@
+<!-- basic information about the registration -->
 <% a = @registration %>
 
 
@@ -314,11 +315,6 @@ Flight Details
     </li>
 </ul>
 <br/>
-<div class="brg0"> </div>
-    <br/>
-    <br/>
 
-
-           <div id="registration_id_div" data-registration_id='<%= a.id %>' data-model_sing='registration' data-model_plu='registrations' ></div>      
 
 </div>
