--- a/app/views/institutions/_actions.html.erb
+++ b/app/views/institutions/_actions.html.erb
@@ -1,23 +1,27 @@
+<!-- actions the tabs -->
+<% mains = {          contract:     ["Contract",:read],
+                      people:     ["Person",:read], 
+                      finance: ["Fee",:read]} %><!--Guess the fee should be finance -->
+                      
         <% actions = {email:     ["Email",:create],
                       follow_up: ["FollowUp",:create],
                       note:      ["Note",:create],
                       todo:      ["Todo",:create],
-                      assign_to: ["Registration",:update]} %>
-
-        <% actions.keys.each do |elem| %>
-          <% if can? actions[elem][1],actions[elem][0].constantize %>
-              <!--  Shortening variable names -->
-              <% e = elem.to_s.titleize %>
-              <%= radio_button_tag 'action',
-                                   e,
-                                   false,
-                                   onclick: "action_partial('institutions',
-                                                            '#{e.downcase.tr(" ", "_")}',
-                                                            '#{@institution.id}');" %>
-              <%= label_tag elem.to_s.titleize %>
-              &nbsp;&nbsp;&nbsp;&nbsp;
-          <% end %>
-        <% end %>
+                      assign_to: ["Institution",:update]} %>       
+        
+        <li class="dropdown actions">
+            <a href="#" id="myTabDrop1" class="dropdown-toggle" data-toggle="dropdown">
+                Actions
+                    <b class="caret"></b>
+            </a>
+            <ul class="dropdown-menu" role="menu" aria-labelledby="myTabDrop1">
+               <%= iterate_tabs(actions,'institution',{tabindex: "-1"}) %>
+            </ul>
+        </li>
+        
+        <%= iterate_tabs(mains,'institution') %>
+        
+        
 <br/>
 <br/>
 
