--- a/app/views/institutions/_contract.html.erb
+++ b/app/views/institutions/_contract.html.erb
@@ -7,7 +7,7 @@
 <br/>
 
 <ul class="vlsdet">
-   <% @institution.contracts.each do |i| %>
+   <% obj.contracts.each do |i| %>
     <!-- @programme is used in 2 partials, change status and add note -->
     <% @contract = i %>
    
@@ -49,7 +49,7 @@
       <%= link_to i._upd_by.try(:first_name),"#" %> &nbsp;&nbsp; <%= tym(i.created_at) %></li>
      <br/>
      <br/>
-     <%= render 'contracts/document' %>
+     <%= render 'contracts/document',obj: obj %>
      <br/>
      <br/>
 
