--- a/app/views/registrations/_actions.html.erb
+++ b/app/views/registrations/_actions.html.erb
@@ -1,27 +1,28 @@
+<!-- actions the tabs -->
+        <% mains = {  application:     ["Programme",:read],
+                      document:     ["Document",:read], 
+                      finance: ["Fee",:read],
+                      timeline: ["Registration",:read]} %>
+                      
         <% actions = {email:     ["Email",:create],
                       follow_up: ["FollowUp",:create],
                       note:      ["Note",:create],
                       todo:      ["Todo",:create],
-                      assign_to: ["Registration",:update],
-                      timeline: ["Registration",:read],
-                      application:     ["Programme",:read],
-                      document:     ["Document",:read], 
-                      finance: ["Payment",:read]} %>
-
-        <% actions.keys.each do |elem| %>
-          <% if can? actions[elem][1],actions[elem][0].constantize %>
-              <!--  Shortening variable names -->
-              <% e = elem.to_s.titleize %>
-              <li id=<%= "#{elem}" %> >
-                <%= link_to elem.to_s.titleize,
-                    "#",
-                     {onclick: "action_partial('registrations',
-                                               '#{e.downcase.tr(" ", "_")}',
-                                               '#{@registration.id}');"} %>
-              
-              </li>
-          <% end %>
-        <% end %>
+                      assign_to: ["Registration",:update]} %>       
+        
+        <li class="dropdown actions">
+            <a href="#" id="myTabDrop1" class="dropdown-toggle" data-toggle="dropdown">
+                Actions
+                    <b class="caret"></b>
+            </a>
+            <ul class="dropdown-menu" role="menu" aria-labelledby="myTabDrop1">
+               <%= iterate_tabs(actions,'registration',{tabindex: "-1"}) %>
+            </ul>
+        </li>
+        
+        <%= iterate_tabs(mains,'registration') %>
+        
+        
 <br/>
 <br/>
 
