--- a/app/views/shared/_note.html.erb
+++ b/app/views/shared/_note.html.erb
@@ -30,5 +30,9 @@
 <!--------------------------------------------------------------->
 
 
-<script> acttab('note'); </script>
+<script> 
+
+acttab('note'); 
+actdd();
+</script>
 
