--- a/app/views/shared/_todo.html.erb
+++ b/app/views/shared/_todo.html.erb
@@ -1,8 +1,15 @@
 <!-- todos for core models -->
-<% if @list.to_i == 1 && obj.todos.size > 0 %>
-<table class="tables2" border="0" cellpadding="0" cellspacing="0" width="100%">
-     <thead>
-      <tr>
+
+<div class="col-md-12">
+  <div class="config-content">
+    <% if @list.to_i == 1 && obj.todos.size > 0 %>
+    <div class="row">
+      <h4>Todos</h4>
+    </div>
+    <div class="row">
+      <table class="table table-striped">
+        <thead>
+          <tr>
                             <th>Topic</th>
                             <th>Description</th>
                             <th>Status</th>
@@ -10,12 +17,11 @@
                             <th>Priority</th>
                             <th>Assigned To</th>
                             <th>Assigned By</th>
-                            <th>View All</th>
-      </tr>
-    </thead>
-    <tbody>
-            <% obj.todos.each do |t| %>
-                <tr >
+          </tr>
+        </thead>
+        <tbody>
+           <% obj.todos.each do |t| %>
+                <tr>
                     <td><%= t.topic.try(:name) %></td>
                     <td><%= t.desc %></td>
                     <td><%= t.status %></td>
@@ -23,57 +29,93 @@
                     <td><%= t.priority %></td>
                     <td><%= t.ato %></td>
                     <td><%= t.aby %></td>
-                    <td  class="preview" data-todo_id='<%= t.id %>'>...</td>
                </tr>
-           <% end %> 
-<tr>
-                    <td colspan="7" align="left"><a href="#">Back</a></td>
-               </tr>           
+           <% end %>  
+        </tbody>
+      </table>
+    </div>
+    <% end %>
 
-    </tbody>
-  </table>
-<br/>
-<br/>
-<% end %>
-<div class="htab">
-<h6><b>New Todo</b></h6>
-</div>
-<br/>
+<div class="well">
+        <div class="row row-top">
+          <h4>New Todo</h4>
+        </div>
 
-<div id="followup-action" class="action-box">
-<%= form_for(@todo) do |g| %>
+          <%= form_for(@todo) do |g| %>
+            <%= g.hidden_field obj_id.to_sym, value: id %>
+            <%= g.hidden_field :assigned_by, :value => current_user.id.to_s %>
+            
+            <%= bs(g,[:topic_id,TodoTopic.order(:name), 
+                               :id, 
+                               :name,
+                               {prompt: "-todo topic-"},
+                               {}],
+                               "collection_select",
+                               [nil,2],5,12,"row") %> 
+            
+            <%= bs(g,:title,"text_field",[nil,2],5,12,"row") %>
+                      
+            <%= bs(g,[:assigned_to,User.order(:first_name), 
+                               :id, 
+                               :first_name,
+                               {prompt: "-assign to-"},
+                               {}],
+                               "collection_select",
+                               ["Assign To",2],5,12,"row") %>
+                               
+            <%= bs(g,[:duedate,
+                      :class => "dateTimeField caltf"],"text_field",[nil,2],5,12,"row") %>
 
-                 <%= g.hidden_field obj_id.to_sym, value: id %>
-                 <div class="cols">
-                    <div class="col6">
-
-                        <%= hidden_field_tag "#{g.object_name}[model]",obj_name.downcase %>
-                        <%= go_create(g,"todo_topic","topic_id","name",1,"fbox") %> 
-                        <%= fbox(g,"title","text_field",nil) %>
-                        <%= fbox(g,[:assigned_to, 
-                                 User.order(:first_name), 
-                                 :id, 
-                                 :first_name,
-                                 {:prompt => "--User--"}],"collection_select",1,"Assign To") %>
-                        
-                        <%= fbox(g,[:duedate,:class => "dateTimeField caltf "],"text_field",nil) %>
-                        <div class="fbox">
-                        <label>Priority</label>
-                        <%= g.select(:priority,
-                                     options_for_select(["High","Medium","Low"])) %>
-                        </div> 
-                        <%= fbox(g,[:desc,:size => "2x2",:style => "height:auto"],"text_area",nil,"Description") %>
-                        
-                        <%= fbox(g,[:api,:style => "white-space:normal"],"check_box",nil,"Add To Google?") %>
-                        
-                        <%= g.hidden_field :assigned_by, :value => current_user.id.to_s %>
+            
+            
+            <div class="row">
+                <div class="col-md-12">
+                    <div class="form-group">
+                      <label for="email_a" class="control-label col-sm-2">
+                        Add
+                      </label>
+                      <div class="col-sm-9">
+                        <a onclick="$('#more_fields').slideToggle();">more fields</a>
+                      </div>
                     </div>
-                </div>
-    <br/>
-    <br/>
-    <%= g.submit "Create",{:class => "btnp fl"} %>
-    <div class="cl"></div>
-<% end %>
+               </div>
+            </div>
+            
+            <div id="more_fields" style="display: none;">
+            
+                      
+            <%= bs(g,[:api,
+                      :style => "white-space:normal"],"check_box",["Add TO Google?",2],5,12,"row") %>
+                      
+            <%= bs(g,[:desc,
+                      :size => "2x2"],"text_area",["Description",2],5,12,"row") %>
+                      
+           <div class="row">
+                <div class="col-md-12">
+                    <div class="form-group">
+                      <label for="email_a" class="control-label col-sm-2">
+                        Priority
+                      </label>
+                      <div class="col-sm-5">
+                         <%= g.select(:priority,
+                                      options_for_select(["High","Medium","Low"]),
+                                      {},
+                                      {class: "form-control"}) %>
+                      </div>
+                    </div>
+               </div>
+            </div>
+            <div class="form-group form-last">
+                    <div class="col-sm-offset-10 col-sm-10">
+                      <%= g.submit "Save", {class: "btn btn-primary"} %>
+                    </div>
+            </div>
+            <% end %>
+      </div><!-- end well-->
+  </div>
 </div>
 
-<script> acttab('todo'); </script>
+<script> 
+acttab('todo'); 
+actdd();
+</script>
